2000-11-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/GSMime.h: Added GSMimeEncodingContext etc
	* Headers/Foundation/NSURLHandle.h: Added some more property keys.
	* Source/GSMime.m: Update to add method for general decoding of
	different transfer encoding types including chunked (for http1.1).
	* Source/GSHTTPURLHandle.m: Added new class for http and https support.
	* Source/NSURLHandle.m: Register class for http and https support.
	* Source/externs.m: Added property keys for URL handles.
	* Documentation/gsdoc/GSMime.gsdoc: updated
	* Documentation/gsdoc/GSMimeDocument.gsdoc: updated
	* Documentation/gsdoc/GSMimeParser.gsdoc: updated

2000-11-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m: ([-userLanguages]) updated to ensure we
	don't get empty strings in the language list.
	* Headers/Foundation/GSMime.h: Revised API
	* Source/GSMime.m: Revised API to make more sense
	* Documentation/gsdoc/GSMime.gsdoc: ditto
	* Documentation/gsdoc/GSMimeDocument.gsdoc: ditto
	* Documentation/gsdoc/GSMimeParser.gsdoc: ditto

2000-11-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSURL.m:  ([-explode]) bugfix for parsing username/password
	provided by mark@brainstorm.co.uk

2000-11-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpPort.m: Altered all GSTcpHandle debug output to include
	current thread.  Added locking for read/write operations on handle.
	Hopefully all thread-safe now :-)

2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: ([-_getReplyRmc:]) added semi-busy wait
	for when the connection is being used from multiple threads.

2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.in: Added checks for OpenSSL
	* Headers/gnustep/base/NSFileHandle.h: Added info for SSL handles.
	* Source/UnixFileHandle.m: Added GSUnixSSLHandle class based on
	code by <mark@brainstorm.co.uk>

2000-11-15  Richard Frith-Macdonald <rfm@gnu.org>
